<resources>
    <string name="app_name">Football Club</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_club">Club</string>
    <string name="title_match_next">Next Match</string>
    <string name="title_match_last">Last Match</string>
    <string name="title_favorite_club">Favorite Club</string>
    <string name="title_favorite_match">Favorite Match</string>
    <string name="versus_main"> VS </string>

    <string name="img">Image</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="choose_league_club">Choose League Club :</string>
    <string name="favorites">Favorites</string>
    <string name="url_test">https://www.thesportsdb.com/api/v1/json/1/search_all_teams.php?l=English%20Premier%20League</string>

    <string name="remove_favorite">Remove Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="Weight">Weight</string>
    <string name="Height">Height</string>
    <string name="position">Position</string>
    <string name="description">Description</string>
    <string name="descriptionMe">Hallo, saya adalah salah satu Calon Developer Android dan Web di wilayanh Tangerang. Untuk Web saya mengunakan bahasa PHP dengan framework Code Igniter, Laravel ataupun Native. Untuk Android mengunakan bahasa Kotlin, Java, ataupun hybrid </string>

    <!--Spinner for League-->
    <string-array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </string-array>

    <!--ID from Spinner League-->
    <string-array name="league_id">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>


</resources>
